--- a/style.css
+++ b/style.css
@@ -39,14 +39,64 @@ h2{
 h2:hover{
   color:#000;
 }
-@media screen only(max-width:480px)
+@media only screen and (max-width:480px)
 {
   .main{
    width:100%;
    border:5px solid #000;
    display:flex;
-   flex-direction:column;
-   flex wrap:wrap;
+   flex-direction: column;
+   flex-wrap: wrap;
+   background-color:#ddd;
+
+}
+.left{
+  width:100%;
+  border:2px solid #c45e45;
+  margin:5px 3px 1px 10px;
+  padding:5px;
+  background-color:#999;
+  text-align:center;
+}
+.left img{
+  width: 200px
+  border-radius:50%
+  border: 2px solid #red
+  box-shadow:3px 6px 2px #000;
+}
+.right{
+  width:100%;
+  border: 5px solid #000;
+  margin:3px;
+  padding:5px;
+  background-color:#666;
+  text-align: center;
+}
+#name{
+  color:#000;
+}
+h1{
+  color:#fff;
+}
+h1:hover{
+  color:#000;
+}
+h2{
+  color:#fff;
+}
+h2:hover{
+  color:#000;
+}
+
+}
+@media only screen and (min-width:481px) and (max max-width:769px)
+{
+  .main{
+   width:100%;
+   border:5px solid #000;
+   display:flex;
+   flex-direction: column;
+   flex-wrap: wrap;
    background-color:#ddd;
 
 }
