--- a/style.css
+++ b/style.css
@@ -89,7 +89,7 @@ h2:hover{
 }
 
 }
-@media only screen and (min-width:481px) and (max max-width:769px)
+@media only screen and (min-width:480px) and (max-width:768px)
 {
   .main{
    width:100%;
@@ -103,8 +103,8 @@ h2:hover{
 .left{
   width:100%;
   border:2px solid #c45e45;
-  margin:5px 3px 1px 10px;
-  padding:5px;
+  padding:5px 3px 1px 10px;
+  margin:5px;
   background-color:#999;
   text-align:center;
 }
